/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;
package org.apache.airavata.mft.resource.service.s3;

import "s3/S3Storage.proto";

service S3StorageService {

    // Storage
    rpc listS3Storage (org.apache.airavata.mft.resource.stubs.s3.storage.S3StorageListRequest) returns
    (org.apache.airavata.mft.resource.stubs.s3.storage.S3StorageListResponse);
    
    rpc getS3Storage (org.apache.airavata.mft.resource.stubs.s3.storage.S3StorageGetRequest) returns
    (org.apache.airavata.mft.resource.stubs.s3.storage.S3Storage);

    rpc createS3Storage (org.apache.airavata.mft.resource.stubs.s3.storage.S3StorageCreateRequest) returns
    (org.apache.airavata.mft.resource.stubs.s3.storage.S3Storage);

    rpc updateS3Storage (org.apache.airavata.mft.resource.stubs.s3.storage.S3StorageUpdateRequest) returns
    (org.apache.airavata.mft.resource.stubs.s3.storage.S3StorageUpdateResponse);

    rpc deleteS3Storage (org.apache.airavata.mft.resource.stubs.s3.storage.S3StorageDeleteRequest) returns
    (org.apache.airavata.mft.resource.stubs.s3.storage.S3StorageDeleteResponse);
}